--- a/MirrorflyUIKITSample/Info.plist
+++ b/MirrorflyUIKITSample/Info.plist
@@ -22,6 +22,6 @@
 		</dict>
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Allow</string>
+	<string>Allow Mirrorfly-UIKIT to access photos </string>
 </dict>
 </plist>
